--- a/tftbuddy/src/index.css
+++ b/tftbuddy/src/index.css
@@ -288,7 +288,7 @@ button {
 }
 
 /* Champion Info Modal */
-#champ-modals div {
+#champ-modals {
   position:fixed;
   z-index:99;
   width:400px;
@@ -298,6 +298,10 @@ button {
   transform: translateX(-50%);
   top:10%;
   font-size:1.2rem;
+}
+#champ-modals div {
+  position: relative;
+  margin:auto;
 }
 #champ-modals > div > img {
   width:100%;
@@ -312,8 +316,8 @@ button {
 #champ-modals #modal-colL {
   position:absolute;
   top:1rem;
-  width:100px;
-  left:260px;
+  width:40%;
+  left:45%;
 }
 #champ-modals > div > div > p {
   padding:.25rem;
@@ -322,54 +326,57 @@ button {
 }
 #champ-modals #modal-colR {
   position: absolute;
-  width:100px;
+  width:40%;
   top:1rem;
-  left:360px;
+  left:75%;
 }
 #champ-modals #champ-info-overlay {
   position:absolute;
   width:100%;
   height:236px;
   top:0px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 #champ-modals #champ-type-1 {
   position:absolute;
   top:60px;
   text-align:left;
-  left:210px;
+  left:1rem;
 }
 #champ-type-1 h4 {
   display:inline-block;
   transform: translateY(-8px);
   padding-left:4px;
+  text-shadow: 2px 4px 8px black;
 }
 #champ-modals #champ-type-2 {
   position:absolute;
   top:100px;
   text-align:left;
-  left:210px;
+  left:1rem;
 }
 #champ-type-2 > h4 {
   display:inline-block;
   transform: translateY(-8px);
   padding-left:4px;
+  text-shadow: 2px 4px 8px black;
 }
 #champ-modals #champ-type-3 {
   position:absolute;
   top:140px;
   text-align:left;
-  left:210px;
+  left:1rem;
 }
 #champ-type-3 h4 {
   display:inline-block;
   transform: translateY(-8px);
   padding-left:4px;
+  text-shadow: 2px 4px 8px black;
 }
 #champ-modals #exit-champ-info {
   position:absolute;
-  top:0px;
-  left:386px;
+  top:6px;
+  right:0px;
   width:26px;
   height:26px;
   cursor: pointer;
@@ -379,7 +386,7 @@ button {
   background-color:white;
   width:20px;
   height:4px;
-  transform: translateX(-10px) translateY(8px) rotate(45deg);
+  transform: translateX(-10px) translateY(12px) rotate(45deg);
 }
 #exit-champ-info div:nth-child(2) {
   background-color:white;
@@ -393,7 +400,7 @@ button {
   width:180px;
   height:40px;
   z-index:99;
-  left:100px;
+  left:1rem;
   top:186px;
 }
 #champ-modals #champ-items > div:nth-child(1) {
@@ -402,7 +409,7 @@ button {
   border-radius:40px;
   background-color:rgb(70,70,70);
   position:absolute;
-  left:20px;
+  left:0px;
   top:0px;
   font-size:2rem;
   text-align: center;
@@ -416,7 +423,7 @@ button {
   border-radius:40px;
   background-color:rgb(70,70,70);
   position:absolute;
-  left:80px;
+  left:52px;
   top:0px;
   font-size:2rem;
   text-align: center;
@@ -430,7 +437,7 @@ button {
   border-radius:40px;
   background-color:rgb(70,70,70);
   position:absolute;
-  left:140px;
+  left:104px;
   top:0px;
   font-size:2rem;
   text-align: center;
@@ -465,6 +472,10 @@ button {
     height:4px;
   
   }
+  #champ-modals div {
+    width:90%;
+  }
+
 }
 @media only screen and (min-width:651px) and (max-width:1000px) {
   #modal img, #modal-items img {
