--- a/tftbuddy/src/index.css
+++ b/tftbuddy/src/index.css
@@ -12,7 +12,7 @@
   -webkit-box-sizing: border-box;
 }
 body {
-  background-color:darkslategray;
+  background-color:whitesmoke;
 }
 button {
   cursor: pointer;
@@ -29,7 +29,6 @@ button {
   padding:1rem;
   padding-bottom:4rem;
   background-color:rgb(45, 60, 60);
-  box-shadow: 0px 8px 20px black;
 }
 
 /* Site Navigation */
